# NovaCPP

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  nova.bat
novacpp/: fetch.hpp  html.hpp  state.hpp
render/: index.html  nova.js  styles.css
src/: App.cpp  main.cpp
src/backend/: Auth.cpp  Auth.hpp  Database.cpp  Database.hpp
src/frontend/: App.cpp
